--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       href="./images/favicon-32x32.png"
     />
 
+    <!-- css link -->
+    <link rel="stylesheet" href="./src/css/style.css" />
+
+    <!-- font family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Advice generator app</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -38,5 +49,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div> -->
+
+    <script src="./src/js/main.js"></script>
   </body>
 </html>
