--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <!-- css link -->
+    <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
 
     <!-- font family -->
