CSS and JS done

--- a/index.html
+++ b/index.html
@@ -39,9 +39,19 @@
   </head>
   <body>
     <main class="card">
-      <h1 class="card__title">Advice #<!-- Advice ID goes here --></h1>
+      <h1 id="card__title" class="card__title">
+        <!-- Advice #117 -->
+      </h1>
 
-      <p class="card__advice">"<!-- Advice text goes here -->"</p>
+      <p id="card__advice" class="card__advice">
+        <!-- “It is easy to sit up and take notice, what's difficult is getting up
+        and taking action.” -->
+      </p>
+      <img src="./images/pattern-divider-mobile.svg" class="card__divider" />
+
+      <button id="button" class="card__dice">
+        <img src="./images/icon-dice.svg" alt="Dice Icon" />
+      </button>
     </main>
 
     <!-- <div class="attribution">
