--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="/src/images/favicon-32x32.png"
     />
 
     <!-- css link -->
@@ -39,27 +39,19 @@
   </head>
   <body>
     <main class="card">
-      <h1 id="card__title" class="card__title">
-        <!-- Advice #117 -->
-      </h1>
+      <h1 id="card__title" class="card__title"></h1>
 
-      <p id="card__advice" class="card__advice">
-        <!-- “It is easy to sit up and take notice, what's difficult is getting up
-        and taking action.” -->
-      </p>
-      <img src="./images/pattern-divider-mobile.svg" class="card__divider" />
+      <p id="card__advice" class="card__advice"></p>
+      <img
+        src="./src/images/pattern-divider-mobile.svg"
+        class="card__divider"
+      />
 
       <button id="button" class="card__dice">
-        <img src="./images/icon-dice.svg" alt="Dice Icon" />
+        <img src="./src/images/icon-dice.svg" alt="Dice Icon" />
       </button>
     </main>
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+    >
 
     <script src="./src/js/main.js"></script>
   </body>
