--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <title>Frontend Mentor | Advice generator app</title>
+    <title>Advice Generator App</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
