Add alt to divider

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         />
         <img
           class="card__divider"
+          alt="Divider Pattern Image"
           src="./src/images/pattern-divider-mobile.svg"
         />
       </picture>
